--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                             For visualizing country-level trends, we used a grid cartogram to present the data in an interactive and intuitive way.</p>
                     </div>
                     <div class="project-links">
-                        <!-- 링크는 나중에 추가 -->
+                        <a href="https://github.com/Dongjae0324/infovis" target="_blank">Code</a>
                     </div>
                 </div>
             </div>
