--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         </div>
 
         <div id="introduction" class="section">
-            <p>I am a undergraduate student at Yonsei University majoring in Computer Science. Currently, I'm tackling the problems of reinforcement learning and robotics, advised by <a href="https://youngwoon.github.io/youngwoon" target="_blank">Prof. Youngwoon Lee</a>.</p>
+            <p>I am a undergraduate student at Yonsei University majoring in Computer Science. Currently, I'm tackling challenges in reinforcement learning and robotics, advised by <a href="https://youngwoon.github.io/youngwoon" target="_blank">Prof. Youngwoon Lee</a>.</p>
             
             <p>Prior to this, I worked as a research intern at <a href="https://langlab.yonsei.ac.kr/" target="_blank">LangAGI lab</a>, conducting research on LLM-based web agents.</p>
 
